# tp1jgs-

./: .gitignore  CMakeLists.txt  README.md
.github/actions/building/: action.yml
include/: expose_metrics.h  metrics.h
lib/prom/: CMakeLists.txt
lib/promhttp/: CMakeLists.txt
lib/promhttp/src/: promhttp.c
src/: expose_metrics.c  main.c  metrics.c
